# aweber

./: .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  alembic.ini  bandit.yaml  prd.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_widgets.db  widgets.db
.cursor/rules/: project-rules.mdc
.roo/rules/: code-rules-python-fastapi.md
.taskmaster/: config.json
.taskmaster/docs/: original_prd.txt  prd.txt
alembic/: env.py
alembic/versions/: 564fba50d3ed_create_widget_table.py
docs/: API_EXAMPLES.md  PROJECT_REQUIREMENTS_SUMMARY.md
scripts/: __init__.py  format.py  lint.py
src/: __init__.py  main.py
src/app/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  middleware.py
src/app/models/: __init__.py  widget.py
src/app/repositories/: __init__.py  widget.py
src/app/routers/: __init__.py  widgets.py
src/app/schemas/: __init__.py  widget.py
tests/: conftest.py  test_alembic_migrations.py  test_app_structure.py  test_database.py  test_exception_handlers.py  test_exceptions.py  test_logging_config.py  test_middleware.py  test_poetry_migration.py  test_setup.py  test_widget_api.py  test_widget_model.py  test_widget_repository.py  test_widget_repository_simple.py  test_widget_schemas.py
