[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "widget-crud-api"
version = "1.0.0"
description = "A modern Widget CRUD REST API built with FastAPI"
authors = ["Widget Team <team@widgets.dev>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.scripts]
lint = "scripts.lint:main"
format = "scripts.format:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
greenlet = "^3.0.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"
httpx = "^0.25.2"
flake8 = "^6.1.0"
black = "^23.12.1"
bandit = "^1.7.5"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
isort = "^6.0.1"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
max-complexity = 10
ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "aweberenv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "migrations"
]
